[package]
name = "cat_find"
version = "0.1.0"
authors = ["Elizabeth Viera <elizabeth.viera.codes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.3", features=["full"]}
chrono = "0.4"
regex = "1"
futures = "*"
reqwest = "*"
select = "*"
scraper = "*"
prettytable-rs = "*"